@@ -915,7 +915,8 @@ public class LogicalPlanner extends BaseAlgebraVisitor<LogicalPlanner.PlanContex
         LiteralValue literal = (LiteralValue) expr;
         switch (literal.getValueType()) {
           case Boolean:
-            return new ConstEval(DatumFactory.createBool(literal.getValue()));
+            char val = literal.getValue().charAt(0);
+            return new ConstEval(DatumFactory.createBool(val == 't' || val == 'T'));
           case String:
             return new ConstEval(DatumFactory.createText(literal.getValue()));
           case Unsigned_Integer:
